[package]
name = "Digital_World_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"  # Adiciona o pacote `ic-cdk-macros` para resolver as macros `query` e `update`
ic-cdk-timers = "0.10"  # Remova esta dependência se não precisar de timers
